Modify query time-options behavior and layout: fix mobile-device sticky-hover background-color effect, make spacing uniform, improve css.

--- a/web-app/client/src/components/Query/Query.css
+++ b/web-app/client/src/components/Query/Query.css
@@ -1,4 +1,5 @@
 :root {
+  --border-radius: 2px;
   --border-gray: rgba(0,0,0,.2);
   --border-gray-toggle:             rgb(191, 191, 191);
   --background-gray-1-light:        #f4f4f4;
@@ -15,6 +16,7 @@
 
 .boxed {
   border: 1px solid var(--border-gray);
+  border-radius: var(--border-radius);
   background-color: var(--background-gray-2-medium-light);
 }
 .boxed.upper-level > * {
